src/parse/snapshots/protox__parse__tests__parse_group-3.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_field() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Field {
        label: Some(
            (
                Optional,
                0..8,
            ),
        ),
        name: Ident {
            value: "A",
            span: 15..16,
        },
        kind: Group {
            body: MessageBody {
                items: [],
                extensions: [],
                options: [],
                reserved: [],
            },
        },
        number: Int {
            negative: false,
            value: 1,
            span: 19..20,
        },
        options: [],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..28,
    },
)
