src/parse/snapshots/protox__parse__tests__parse_group-9.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "an integer",
            found: "{",
            span: 19..20,
        },
    ],
)
