src/parse/snapshots/protox__parse__tests__parse_import-10.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_import() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Import {
        kind: None,
        value: String {
            value: "foo/./bar",
            span: 7..18,
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..19,
    },
)
