src/parse/snapshots/protox__parse__tests__parse_import-2.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_import() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Import {
        kind: None,
        value: String {
            value: "foo",
            span: 19..24,
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: Some(
                "leading",
            ),
            trailing_comment: Some(
                "trailing",
            ),
        },
        span: 12..25,
    },
)
